# learning-data-engineering-concepts

./: .env.example  .gitignore  CLAUDE.md  README.md  WIKI.md  pyproject.toml
.claude/: settings.json
.obsidian/: app.json
.vault-meta/: auto-commit.disabled  mode.json
data/: content.json
data/ingest/: vutr-kafka.txt  vutr-spark.txt
data/personas/: vutr.md
docs/: vault-improvement-recommendations.md
learning-vault/: Home.md  computer-science-basics-moc.md  data-modeling-moc.md  data-pipelines-moc.md  databases-moc.md  software-engineering-foundations-moc.md
learning-vault/computer-science-basics/: data-structures-moc.md
learning-vault/data-modeling/: warehouse-modeling-moc.md
learning-vault/data-pipelines/: dbt-data-build-tool-moc.md  orchestration-moc.md  processing-paradigms-moc.md
learning-vault/databases/: relational-databases-moc.md
learning-vault/software-engineering-foundations/: code-quality-moc.md  working-with-code-moc.md
learning-vault/synthesized/: dbt-commands-run-build-test.md  dbt-end-to-end-from-raw-to-reports.md  dbt-flashcards.md  dbt-materializations-when-to-use-which.md  dbt-project-anatomy.md  dbt-reuse-jinja-macros-packages.md  lint-report-2026-06-24.md  synthesized-moc.md
prompts/: vault-teaching-engine.md
scripts/: render_learning_artifact.py
scripts/assets/: caveat.b64
scripts/diagram_specs/: spark.json
src/de_toolkit/: __init__.py  cli.py  config.py  diagrams.py  models.py  teach.py  vault.py
src/persona_wiki/: bootstrap.py  cdc.py  qc.py  (+15 more)
tests/: test_teach.py  test_vault.py
wiki/: hot.md  index.md  log.md
(+1273 files in other folders)
