[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "de-toolkit"
version = "0.1.0"
description = "Turn data-engineering study notes into a linked Obsidian vault."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
de-toolkit = "de_toolkit.cli:app"
persona-wiki = "persona_wiki.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
